IPTCNET & SPE Menu Change

--- a/mainsite/templates/include_www_header.html
+++ b/mainsite/templates/include_www_header.html
@@ -105,7 +105,7 @@
                                 <div class="nav-col col-sm-6 col-md-3">
                                     <a href="http://www.spe.org/events/calendar/"><span class="link-icon events-calendar"></span><span class="link-title">Events Calendar</span></a>
                                     <a href="http://www.spe.org/training/courses.php"><span class="link-icon training-courses"></span><span class="link-title">Training Courses</span></a>
-                                    <a href="https://webevents.spe.org/"><span class="link-icon web-events"></span><span class="link-title">Webinars</span></a>
+                                    <a href="https://webevents.spe.org/"><span class="link-icon web-events"></span><span class="link-title">SPE Online Education</span></a>
                                     <a href="http://www.spe.org/dl/schedule.php" class="last"><span class="link-icon distinguished-lect"></span><span class="link-title">Distinguished Lecturer</span></a>
                                 </div>
                                 <div class="col-xs-12 visible-xs navcolborder"></div>
@@ -243,7 +243,7 @@
                                     </a>
                                     <a href="https://webevents.spe.org/" class="last">
                                         <span class="link-icon web-events"></span>
-                                        <span class="link-text"><span class="link-title">Webinars</span></span>
+                                        <span class="link-text"><span class="link-title">SPE Online Education</span></span>
                                         <div class="clear"></div>
                                     </a>
                                 </div>
