--- a/mainsite/templates/iptcnet/iptcnet_homepage.html
+++ b/mainsite/templates/iptcnet/iptcnet_homepage.html
@@ -1,4 +1,4 @@
-{% extends "atce/atce_base.html" %}
+{% extends "iptcnet/iptcnet_base.html" %}
 {% load cms_tags sekizai_tags menu_tags staticfiles %}
 
 {% block title %}{% page_attribute "page_title" %}{% endblock title %}
@@ -17,6 +17,9 @@
 
     <div class="padTopBottom container-fluid">{% placeholder "Content Area Four" %}</div>
 
-    <div class="container-fluid">{% placeholder "Map" %}</div>
+{#    <div class="container-fluid">{% placeholder "Map" %}</div>#}
 
 {% endblock cms_content %}
+
+
+
