--- a/spe_events/templates/iptc/iptc_base.html
+++ b/spe_events/templates/iptc/iptc_base.html
@@ -4,7 +4,9 @@
 
 
     {% block web_fonts %}
-        {% include 'include_scripts.html' %}
+        {% with googlecategory="Events" %}
+            {% include 'include_scripts_variable.html' %}
+        {% endwith %}
         <link href="https://fonts.googleapis.com/css?family=Montserrat:200, 300,400,400i,700" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Ubuntu:500" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,400i,700" rel="stylesheet">
