--- a/spe_events/templates/iptc/iptc_homepage.html
+++ b/spe_events/templates/iptc/iptc_homepage.html
@@ -17,7 +17,7 @@
 
     <div class="padTopBottom container-fluid">{% placeholder "Content Area Four" %}</div>
 
-    <div class="container-fluid">{% placeholder "Map" %}</div>
+{#    <div class="container-fluid">{% placeholder "Map" %}</div>#}
 
 {% endblock cms_content %}
 
