Finished first pass at filer changes for Glenda; at a stopping point for awhile.

--- a/mainsite/templates/admin/inc/extrastyle.html
+++ b/mainsite/templates/admin/inc/extrastyle.html
@@ -7,4 +7,8 @@
     .breadcrumbs {
         white-space: nowrap;
     }
+    figure.image {
+        background-color : transparent;
+        border: none;
+    }
 </style>
