--- a/mainsite/static/iptcnet/css/_vars.scss
+++ b/mainsite/static/iptcnet/css/_vars.scss
@@ -9,7 +9,7 @@ $col-atce-green:        #67c18d;
 $col-atce-greenhover:   #74d79e;
 $col-spe-blue:          #0c4c93;
 $col-spe-blue-dark:     #1c407d;
-$col-grey-dark:         #393939;
+$col-grey-dark:         #282828;
 $col-grey:              grey;
 $col-grey-medium:       #AAAAAA;
 $col-grey-light:        #e1e1e1;
@@ -17,6 +17,7 @@ $col-subtab:            #E8E8E8;
 $col-iptc-purple:       #6B3E63;
 $col-iptc-purple-hover: #A5639C;
 $col-iptc-green:        #759D3F;
+$col-iptc-green-hover:  #94bb60;
 
 //$font-main:             'Montserrat', sans-serif;
 $font-main:             'Open Sans', sans-serif;
