--- a/mainsite/templates/iptcnet/iptcnet_homepage.html
+++ b/mainsite/templates/iptcnet/iptcnet_homepage.html
@@ -7,17 +7,13 @@
 
     <div class="container-fluid">{% placeholder "Feature Slider" %}</div>
 
-    <div class="padTopBottom container-fluid">{% placeholder "Content Area One" %}</div>
+    <div class="container-fluid purpleBack">{% placeholder "Content Area One" %}</div>
 
-    <div class="container-fluid sponsorBar">{% placeholder "Sponsor Band" %}</div>
+    <div class="container-fluid purpleBack">{% placeholder "Content Area Two" %}</div>
 
-    <div class="padTopBottom container-fluid">{% placeholder "Content Area Two" %}</div>
+    <div class="container-fluid purpleBack">{% placeholder "Content Area Three" %}</div>
 
-    <div class="padTopBottom container-fluid">{% placeholder "Content Area Three" %}</div>
-
-    <div class="padTopBottom container-fluid">{% placeholder "Content Area Four" %}</div>
-
-{#    <div class="container-fluid">{% placeholder "Map" %}</div>#}
+    <div class="container-fluid purpleBack">{% placeholder "Content Area Four" %}</div>
 
 {% endblock cms_content %}
 
