ATCE dropdown on hover

--- a/spe_events/static/atce/css/_header.scss
+++ b/spe_events/static/atce/css/_header.scss
@@ -154,3 +154,6 @@
     @include text-shadow(0, 0, 0, rgba(0,0,0,0));
   }
 }
+div.nav li.dropdown:hover > ul.dropdown-menu {
+    display: block;
+}
