--- a/spe_events/static/atce/css/mainstyle.css
+++ b/spe_events/static/atce/css/mainstyle.css
@@ -113,6 +113,8 @@ a:hover { text-decoration: none; }
 
 #collapseHamMenu a { color: white !important; text-shadow: 0 0 0 transparent; }
 
+div.nav li.dropdown:hover > ul.dropdown-menu { display: block; }
+
 /* =================================================================== */
 /* MAIN CONTENT STYLES FOR ATCE
 ====================================================================== */
