HSENOW header & footer

--- a/mainsite/static/hse/css/_footer.scss
+++ b/mainsite/static/hse/css/_footer.scss
@@ -37,6 +37,9 @@
 }
 .footerLogo {
 }
+.footerText {
+  color:              $col-white;
+}
 .footerSocial {
   font-size:          20px;
   list-style-type:    none;
