--- a/mainsite/templates/include_hse_footer.html
+++ b/mainsite/templates/include_hse_footer.html
@@ -2,43 +2,50 @@
     <!-- FOOTER Begin -->
     <div class="footerUpper row">
         <div class="footerULeft col-md-3">
-            <img src="{% static 'ogf/img/ogf-logo-horizontal.svg' %}" class="footerLogo">
-            <ul class="footerSocial">
-                <li><a href=""><i class="fa fa-facebook"></i></a></li>
-                <li><a href=""><i class="fa fa-twitter"></i></a></li>
-                <li><a href=""><i class="fa fa-linkedin"></i></a></li>
-                <li><a href=""><i class="fa fa-youtube-play"></i></a></li>
-            </ul>
-            <p class="copyright">&copy;2003-2016 Society of Petroleum Engineers, All Rights Reserved.</p>
+            <div class="row">
+                <div class="col-xs-5 padZero">
+                    <img src="{% static 'hse/img/hse-logo-wht.svg' %}" class="footerLogo">
+                </div>
+                <div class="col-xs-7 padZero">
+                    <ul class="footerSocial" style="white-space: nowrap;">
+                        <li><a href=""><i class="fa fa-facebook"></i></a></li>
+                        <li><a href=""><i class="fa fa-twitter"></i></a></li>
+                        <li><a href=""><i class="fa fa-linkedin"></i></a></li>
+                        <li><a href=""><i class="fa fa-youtube-play"></i></a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-xs-12">
+                    <p>&nbsp;</p>
+                    <p class="footerText">HSE Now is a source for news and technical information affecting the health, safety, security, environment, social responsibility, regulation, and quality aspects of the upstream oil and gas industry. HSE Now is updated continually and is available to all SPE members.</p>
+                    <p class="copyright">&copy;2003-2016 Society of Petroleum Engineers, All Rights Reserved.</p>
+                </div>
+            </div>
         </div>
         <div class="footerURight col-md-9">
             <div class="col-md-2 col-md-offset-1">
-                <h3>MAIN</h3>
-                <p><a>Topics</a></p>
-                <p><a>Technology</a></p>
-                <p><a>News</a></p>
-                <p><a>People</a></p>
-                <p><a>Papers</a></p>
-                <p><a>Magazine</a></p>
-            </div>
-            <div class="col-md-3">
-                <h3>DEPARTMENTS</h3>
-                <p><a>From the PFC Technical Director</a></p>
-                <p><a>Culture Matters</a></p>
-                <p><a>Global Market Trends</a></p>
-                <p><a>PFC Roundup</a></p>
-                <p><a>Technology Marketplace</a></p>
-                <p><a>Calendar</a></p>
-                <p><a>Peer-Reviewed Papers</a></p>
-            </div>
-            <div class="col-md-3">
                 <h3>UTILITY</h3>
-                <p><a>About</a></p>
+                <p><a>About HSENow</a></p>
+                <p><a>HSE Discipline</a></p>
+                <p><a>HSE Events</a></p>
                 <p><a>Contact</a></p>
-                <p><a>Subscribe</a></p>
-                <p><a>Advertise</a></p>
-                <p><a>Archive</a></p>
-                <p><a>Submit a Paper<br>for Peer Review</a></p>
+            </div>
+            <div class="col-md-3">
+                <h3>&nbsp;</h3>
+                <p><a>Technical Director</a></p>
+                <p><a>Advisory Committee</a></p>
+                <p><a>Awards</a></p>
+            </div>
+            <div class="col-md-3">
+                <h3>CATEGORIES</h3>
+                <p><a>Exclusive Content</a></p>
+                <p><a>Health</a></p>
+                <p><a>Safety</a></p>
+                <p><a>Security</a></p>
+                <p><a>Environment</a></p>
+                <p><a>Social Responsibility</a></p>
+                <p><a>Regulations</a></p>
             </div>
             <div class="col-md-3">
                 <h3>SPE</h3>
