--- a/mainsite/templates/include_hse_header.html
+++ b/mainsite/templates/include_hse_header.html
@@ -25,13 +25,14 @@
         </div>
 
         <div class="row" id="menubar">
-            <div class="col-md-3" id="mainLogo">
-                <img src="{% static 'ogf/img/ogf-logo-horizontal.svg' %}"/>
+            <div class="col-md-2 col-md-offset-1" id="mainLogo">
+                <img src="{% static 'hse/img/hse-logo.svg' %}"/>
             </div>
-            <div class="col-md-9 text-right">
+            <div class="col-md-8 text-right">
                 <ul class="pubMenu">
-                    {% show_menu 0 0 0 0 %}
-                    <li><a href="/articles/publications/ogf/issues">ISSUES</a></li>
+{#                    {% show_menu 0 0 0 0 %}#}
+                    {% show_menu_below_id "hsenow-mag" %}
+{#                    <li><a href="/articles/publications/ogf/issues">ISSUES</a></li>#}
                     <li class="searchIcon"><a role="button" data-toggle="collapse" href="#collapseSearch" aria-expanded="false" aria-controls="collapseExample"><i class="fa fa-search"></i></a></li>
                 </ul>
             </div>
