update to SPE_BLOG to accommodate HSENOW featured area

--- a/mainsite/static/hse/css/_adzones.scss
+++ b/mainsite/static/hse/css/_adzones.scss
@@ -17,8 +17,8 @@
 /* AD Zone2 */
 #adFold, .adZone2 {
   padding:15px 0;
-  margin-top: 15px;
-  border-top: $dotted;
+  //margin-top: 15px;
+  //border-top: $dotted;
 
   div {
     padding-right:0;
