--- a/mainsite/templates/include_hse_footer.html
+++ b/mainsite/templates/include_hse_footer.html
@@ -3,10 +3,11 @@
     <div class="footerUpper row">
         <div class="footerULeft col-md-3">
             <div class="row">
-                <div class="col-xs-5 padZero">
+                <div class="col-xs-8 text-center">
                     <img src="{% static 'hse/img/hse-logo-wht.svg' %}" class="footerLogo">
+                    <p>&nbsp;</p>
                 </div>
-                <div class="col-xs-7 padZero">
+                <div class="col-xs-12 text-center">
                     <ul class="footerSocial" style="white-space: nowrap;">
                         <li><a href=""><i class="fa fa-facebook"></i></a></li>
                         <li><a href=""><i class="fa fa-twitter"></i></a></li>
