--- a/mainsite/templates/plugins/title_plugin.html
+++ b/mainsite/templates/plugins/title_plugin.html
@@ -1,4 +1,4 @@
 <div class="row tiletitlerow">
     <hr class="tiletitlehr">
-    <h2 class="tiletitles" style="color: {{ textcol }}; background-color: {{ backcol }};">{{ title }}</h2>
+    <h2 class="tiletitles" style="color: {{ textcol }}; background-color: {{ backcol }};">{{ title | safe }}</h2>
 </div>
