--- a/mainsite/static/hse/css/_tiles.scss
+++ b/mainsite/static/hse/css/_tiles.scss
@@ -101,10 +101,10 @@
 }
 .featured-story {
   padding:              0;
-  min-height:           360px;
+  //min-height:           360px;
 
   .story-wrap {
-    min-height:         360px;
+    //min-height:         360px;
     color:              $col-white;
     background-size:    cover;
     position:           relative;
@@ -126,7 +126,7 @@
 .tile-editorial {
   background-color:     $col-black;
   color:                $col-white;
-  padding:              15px;
+  padding:              0;
   min-height:           360px;
 
   .title1, .title2, .excerpt, .authorBio {
@@ -159,24 +159,23 @@
   a {
     color:$col-white;
   }
-
+}
+.editorialcol {
+  padding: 0 0 0 30px;
+}
+.sideListItem {
+  padding: 10px 0;
+  border-bottom: 1px solid $col-notsolightgrey;
 }
 .tile-textbelow {
   padding-bottom:       20px;
 }
 .tiletitlehr {
-  margin-top:           0;
-  height:               5px;
-  border:               none;
-  color:                $col-hrblue;
-  background-color:     $col-hrblue;
+  display: none;
 }
 .tiletitles {
-  color:                $col-copygrey;
-  font-size:            25px;
-  border-bottom:        1px dotted $col-basegrey;
-  padding-bottom:       10px;
-  margin-bottom:        15px;
+  margin:               0 0 20px 0;
+  padding:              10px;
 }
 .tile-curntIssue {
   min-height:           150px;
