--- a/mainsite/templates/hse_base.html
+++ b/mainsite/templates/hse_base.html
@@ -6,6 +6,9 @@
     {{ block.super }}
     <script src="https://use.typekit.net/xwk3nys.js"></script>
     <script>try{Typekit.load({ async: true });}catch(e){}</script>
+    <script>
+        var thisPub = 'hsenow'; // Global
+    </script>
 {% endblock web_fonts %}
 
 {% block css_base %}
