--- a/mainsite/templates/hse_home.html
+++ b/mainsite/templates/hse_home.html
@@ -4,50 +4,43 @@
 {% block title %}{% page_attribute "page_title" %}{% endblock title %}
 
 {% block content %}
-    <div class="row content-area">
-
+    <div class="row topArea content-area padZero">
+        <div class="col-xs-12 col-lg-10 col-lg-offset-1">
+            {% placeholder "title area" %}
+        </div>
+    </div>
+    <div class="row content-area featuredArea">
         <div class="col-xs-12 col-sm-8 col-lg-7 col-lg-offset-1 featurecol">
             {% placeholder "feature" %}
         </div>
-{#        <div class="col-xs-12 col-sm-4 col-lg-3 editorialcol">#}
-{#            {% placeholder "editorial" %}#}
-{#        </div>#}
-
-        <div class="col-xs-12 adZone2 text-center" id="adZone2">
-            <!-- AdSpeed.com Tag 8.0.2 for [Zone] OGF 2 1160x60 [Any Dimension] -->
-            <script type="text/javascript" src="http://g.adspeed.net/ad.php?do=js&zid=79086&oid=7699&wd=-1&ht=-1&target=_blank"></script>
-            <!-- AdSpeed.com End -->
+        <div class="col-xs-12 col-sm-4 col-lg-3 editorialcol">
+            {% placeholder "editorial" %}
         </div>
+
+{#        <div class="col-xs-12 adZone2 text-center" id="adZone2">#}
+{#            {% placeholder "ad zone 2" %}#}
+{#        </div>#}
+    
     </div>
     <div class="row content-area">
         <div class="col-sm-8 col-lg-7 col-lg-offset-1 areaContent">
             {% placeholder "notice" %}
+            {% placeholder "page title" %}
             {% placeholder "content" %}
         </div>
         <div class="col-sm-4 col-lg-3 areaRightSide">
             {% placeholder "aside" %}
-            {% placeholder "additional-content" %}
+            {% placeholder "additional content" %}
         </div>
     </div>
 
-    {% addtoblock "js" %}
-        <script type="text/javascript" charset="utf-8">
-            $( document ).ready(function() {
+{#    {% include 'include_hide_ads.html' %}#}
 
-{#                $("#testmessage").text("BEEN REPLACED");#}
-
-                if ($("#adZone2").find("img").length > 0) {
-                    //do something
-{#                    $("#adZone1").text("HAS IMAGE");#}
-                } else {
-                    // do something else
-                    $("#adZone2").hide(0);
-                }
-
-            });
-        </script>
-    {%  endaddtoblock %}
-
-    {% include 'z_boostrap_size_indicator.html' %}
+    <!-- **** -->
+    <script type="text/javascript" charset="utf-8">
+        $( document ).ready(function() {
+            $('.tile-white img').addClass('img-responsive');
+        });
+    </script>
 
 {% endblock content %}
