--- a/mainsite/templates/ogf_base.html
+++ b/mainsite/templates/ogf_base.html
@@ -7,6 +7,9 @@
     {{ block.super }}
     <script src="https://use.typekit.net/xwk3nys.js"></script>
     <script>try{Typekit.load({ async: true });}catch(e){}</script>
+    <script>
+        var thisPub = 'ogfmag'; // Global
+    </script>
 
 {% endblock web_fonts %}
 
