--- a/mainsite/static/jpt/css/_tiles.scss
+++ b/mainsite/static/jpt/css/_tiles.scss
@@ -135,7 +135,7 @@
   }
 }
 .story, .tile-textbelow {
-  .story-wrap {
+  .story-wrap, .story-wrap-feature {
 
     .pub-date {
       color:            $col-red;
@@ -172,7 +172,7 @@
   margin:               0;
   //min-height:           300px;
 
-  .story-wrap {
+  .story-wrap, .story-wrap-feature {
     //min-height:         300px;
     color:              $col-white;
     background-size:    cover;
