--- a/mainsite/static/jpt/css/_tiles.scss
+++ b/mainsite/static/jpt/css/_tiles.scss
@@ -204,7 +204,7 @@
   margin:               0;
   min-height:           360px;
 
-  .story-wrap {
+  .story-wrap, .story-wrap-feature {
     height:             400px;
     color:              $col-white;
     background-size:    cover;
