SPE WWW pubz menu fix

--- a/mainsite/templates/include_www_header.html
+++ b/mainsite/templates/include_www_header.html
@@ -184,7 +184,8 @@
                                 <div class="col-xs-12 visible-xs navcolborder"></div>
 
 
-                                <div class="nav-col col-sm-6 col-md-{{ colspacing }}">
+{#                                <div class="nav-col col-sm-6 col-md-{{ colspacing }}">#}
+                                <div class="nav-col col-sm-6 col-md-3">
                                     <ul>
                                         <li class="heading">MORE PUBLICATIONS</li>
                                         <li><a href="https://www.spe.org/en/twa/">The Way Ahead</a></li>
