Search Style, added template for HSE article list plugin

--- a/mainsite/static/hse/css/_content.scss
+++ b/mainsite/static/hse/css/_content.scss
@@ -3,23 +3,23 @@
 ====================================================================== */
 @import 'vars';
 
-.bordhsegreen {
-  border: 1px solid $col-hsegreen;
+.bordhsegreen, #bordhsegreen {
+  //border: 4px solid $col-hsegreen;
 }
-.bordhseforestgreen {
-  border: 1px solid $col-hseforestgrn;
+.bordhseforestgreen, #bordhseforestgreen {
+  //border: 4px solid $col-hseforestgrn;
 }
-.bordhseblue {
-  border: 1px solid $col-hseblue;
+.bordhseblue, #bordhseblue {
+  //border: 4px solid $col-hseblue;
 }
-.bordhsepurple {
-  border: 1px solid $col-hsepurple;
+.bordhsepurple, #bordhsepurple {
+  //border: 4px solid $col-hsepurple;
 }
-.bordhserouge {
-  border: 1px solid $col-hserouge;
+.bordhserouge, #bordhserouge {
+  //border: 4px solid $col-hserouge;
 }
-.bordhseorange {
-  border: 1px solid $col-hseorange;
+.bordhseorange, #bordhseorange {
+  //border: 4px solid $col-hseorange;
 }
 
 
