--- a/mainsite/static/hse/css/_tiles.scss
+++ b/mainsite/static/hse/css/_tiles.scss
@@ -76,7 +76,7 @@
   }
 }
 .story, .tile-textbelow {
-  .story-wrap {
+  .story-wrap, .story-wrap-feature {
 
     .pub-date {
       color:            $col-red;
@@ -103,7 +103,7 @@
   padding:              0;
   //min-height:           360px;
 
-  .story-wrap {
+  .story-wrap, .story-wrap-feature {
     //min-height:         360px;
     color:              $col-white;
     background-size:    cover;
