--- a/mainsite/templates/hse_home.html
+++ b/mainsite/templates/hse_home.html
@@ -23,15 +23,15 @@
     
     </div>
     <div class="row content-area">
-        <div class="col-sm-8 col-lg-7 col-lg-offset-1 areaContent">
+        <div class="col-sm-12 col-md-10 col-md-offset-1 areaContent">
             {% placeholder "notice" %}
             {% placeholder "page title" %}
             {% placeholder "content" %}
         </div>
-        <div class="col-sm-4 col-lg-3 areaRightSide">
-            {% placeholder "aside" %}
-            {% placeholder "additional content" %}
-        </div>
+{#        <div class="col-sm-4 col-lg-3 areaRightSide">#}
+{#            {% placeholder "aside" %}#}
+{#            {% placeholder "additional content" %}#}
+{#        </div>#}
     </div>
 
 {#    {% include 'include_hide_ads.html' %}#}
