--- a/mainsite/templates/include_www_header.html
+++ b/mainsite/templates/include_www_header.html
@@ -330,7 +330,7 @@
                                 <li><a href="http://www.spe.org/industry/salary-survey.php">Salary Survey</a></li>
 {#                                <li><a href="http://www.spe.org/industry/sites/sustainability/">Sustainability</a></li>#}
                                 <li><a href="http://www.spe.org/industry/reserves.php">Petroleum Reserves Definitions</a></li>
-                                <li><a href="http://www.spe.org/industry/geologic-storage-resources-management-system.php">Geologic Storage Resources</a></li>
+                                <li><a href="http://www.spe.org/industry/CO2-resources-management-system.php">CO2 Storage Resources Management System</a></li>
                             </ul>
                         </div>
                         <div class="col-xs-12 visible-xs visible-sm navcolborder"></div>
