--- a/mainsite/templates/include_jpt_css.html
+++ b/mainsite/templates/include_jpt_css.html
@@ -1,3 +1,3 @@
 {% load cms_tags sekizai_tags staticfiles %}
     <!-- CSS_BASE -->
-    <link rel="stylesheet" type="text/css" media="all" href="{% static 'jpt/css/mainstyle.css' %}" />
+    <link rel="stylesheet" type="text/css" media="all" href="{% static 'jpt/css/mainstyle.css' %}?v=1.2" />
