--- a/mainsite/templates/include_www_header.html
+++ b/mainsite/templates/include_www_header.html
@@ -364,9 +364,14 @@
     <!-- LOGO BAR -->
     <div id="branding" class="row">
 
-            <div class="col-xs-8 col-xs-offset-1 col-sm-4 col-sm-offset-0 logo-wrap">
+            <div class="col-sm-4 col-sm-offset-0 hidden-xs logo-wrap">
 {#                        <a href="/" class="spe-logo" title="SPE Homepage"><h1 id="logo">The Society of Petroleum Engineers</h1></a>#}
                 <img src="{% static 'www/img/spe_logo_full.png' %}" class="img-responsive">
+            </div>
+
+            <div class="col-xs-8 col-xs-offset-2 visible-xs">
+                <p>&nbsp;</p>
+                <img src="{% static 'www/img/spe_vert.svg' %}" class="img-responsive">
             </div>
 
             <div class="col-xs-12 col-xs-offset-0 col-sm-8 search">
